Started adding CANMIO module descriptor

--- a/config/mergConfig.json
+++ b/config/mergConfig.json
@@ -59,8 +59,7 @@
       "name": "CANPanel"
     },
     "A520": {
-      "name": "CANMIO",
-      "component": "canmio"
+      "name": "CANMIO"
     },
     "A521": {
       "name": "CANACE8MIO"
