--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-/config/default/
-/config/default/layoutDetails.json
-/config/default/nodeConfig.json
-/logs/
+config/default/
+config/default/layoutDetails.json
+config/default/nodeConfig.json
+logs/
+tests/logs
+node_modules
+
